--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  color: white;
+  color: rgb(238, 237, 237);
   background: #64aaa3;
 }
 
@@ -196,6 +196,7 @@ third-section {
 
 jump {
   display: flex;
+  justify-content: flex-end;
   align-self: center;
   background-image: url('../img/jump.png');
   background-size: contain;
@@ -203,7 +204,27 @@ jump {
   width: 50vw;
   height: 20vw;
   overflow: hidden;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid white;
+}
+
+jump icons {
+  display: flex;
+  flex-direction: column;
+  height: 16vw;
+  width: 5vw;
+  align-self: flex-end;
+  margin-right: 8vw;
+  font-size: 2.5vw;
+  justify-content: space-around;
+}
+
+jump icons a {
+  align-self: center;
+}
+
+
+.fa-soundcloud {
+  align-self: center;
 }
 
 p {
@@ -219,6 +240,7 @@ projects {
   align-self: center;
   width: 80vw;
   height: 20vw;
+  margin-bottom: 10vw;
 }
 
 projects a p {
