--- a/css/main.css
+++ b/css/main.css
@@ -35,10 +35,10 @@ me-first {
 first-section text {
   display: flex;
   flex-direction: column;
+  align-items: center;
   color: white;
   margin-top: 3vw;
   font-size: 2vw;
-  text-align: center;
 }
 
 first-section text div {
@@ -218,12 +218,13 @@ jump icons {
   justify-content: space-around;
 }
 
-jump icons a {
+jump icons a div {
+  display: flex;
   align-self: center;
 }
 
-
-.fa-soundcloud {
+jump icons a div.fa-soundcloud span {
+  font-size: 1vw;
   align-self: center;
 }
 
@@ -282,11 +283,20 @@ memorygame {
   overflow: hidden;
 }
 
-/*footer {
+footer {
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
   background: #64aaa3;
-  border-top: 1px solid gray;
+  border-top: 1px solid white;
   width: 100vw;
-  height: 10vh;
+  height: 5vw;
   overflow: hidden;
-}*/
+}
+
+footer div {
+  display: flex;
+  justify-content: center;
+  min-width: 20vw;
+}
