--- a/css/main.css
+++ b/css/main.css
@@ -13,17 +13,24 @@ a {
   text-decoration: none;
 }
 
-first-section {
-  display: flex;
+.first-section {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: center;
+  -webkit-justify-content: center;
   background-color: black;
   height: auto;
   width: 100vw;
   overflow: hidden;
 }
 
-me-first {
-  display: flex;
+.first-section .me-first {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   background: url('../img/pic-first-section.jpg') right no-repeat;
   background-size: contain;
   width: 18vw;
@@ -32,17 +39,23 @@ me-first {
   margin-right: 2vw;
 }
 
-first-section text {
-  display: flex;
+.first-section .text {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   flex-direction: column;
+  -webkit-flex-direction: column;
   align-items: center;
+  -webkit-align-items: center;
   color: white;
   margin-top: 3vw;
   font-size: 2vw;
 }
 
-first-section text div {
+.first-section .text div {
   align-self: center;
+  -webkit-align-self: center;
 }
 
 
@@ -84,9 +97,13 @@ first-section text div {
   font-size: 1.77vw;
 }
 
-text socials{
-  display: flex;
+.text .socials{
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: space-around;
+  -webkit-justify-content: space-around;
   margin-top: 2vw;
   width: 17.7vw;
   border-top: 1px solid white;
@@ -95,63 +112,85 @@ text socials{
 }
 
 
-second-section {
-  display: flex;
+.second-section {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: flex-end;
+  -webkit-justify-content: flex-end;
   width: 100vw;
   background: #404040;
   overflow: hidden;
 }
 
 
-bpop-tech {
-  display: flex;
+.bpop-tech {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
   width: 48vw;
   height: 47.5vw;
   margin: 5vw 4vw 0 0;
   border: 2px solid rgb(214, 214, 214);
 }
 
-bpop-square {
-  display: flex;
+.bpop-square {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: center;
+  -webkit-justify-content: center;
   flex-direction: column;
+  -webkit-flex-direction: column;
   min-width: 23.84vw;
   min-height: 23vw;
 }
 
-bpop-square#with-border {
+.bpop-square#with-border {
   border-right: 1px solid white;
 }
 
-bpop-tech p {
+.bpop-tech p {
   max-width: 20vw;
   font-weight: 300;
   align-self: center;
+  -webkit-align-self: center;
   font-size: 1.3vw;
 }
 
-bpop-tech p span {
+.bpop-tech p span {
   font-weight:bold;
   font-size:2vw
 }
 
-icons {
-  display: flex;
+.icons {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: space-around;
+  -webkit-justify-content: space-around;
   align-items: flex-end;
+  align--webkit-align-items-end;
   max-width: 21vw;
   margin-bottom: 1vw;
 }
 
-icons img {
+.icons img {
   width: 5vw;
   height: 100%;
 }
 
-bpop-square#bpop-example1 {
-  display: flex;
+.bpop-square#bpop-example1 {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   background-image: url("../img/bpop-example1.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -159,24 +198,32 @@ bpop-square#bpop-example1 {
 
 }
 
-bpop-title {
+.bpop-title {
   margin-top: 1vw;
   font-weight: bold;
   font-size: 2vw;
   align-self: center;
+  -webkit-align-self: center;
   border-bottom: 1px solid white;
 }
 
-icons {
-  display: flex;
+.icons {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   width: 30vw;
 }
 
 
-me-second {
-  display: flex;
+.me-second {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   background: url('../img/pic-second-section.jpg') right no-repeat;
   justify-content: center;
+  -webkit-justify-content: center;
   background-size: contain;
   width: 40vw;
   margin-top: 10vw;
@@ -184,20 +231,30 @@ me-second {
   height: 50vw;
 }
 
-third-section {
-  display: flex;
+.third-section {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   flex-direction: column;
+  -webkit-flex-direction: column;
   justify-content: center;
+  -webkit-justify-content: center;
   background: #64aaa3;
   width: 100vw;
   overflow: hidden;
 }
 
 
-jump {
-  display: flex;
+.jump {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: flex-end;
+  -webkit-justify-content: flex-end;
   align-self: center;
+  -webkit-align-self: center;
   background-image: url('../img/jump.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -207,51 +264,71 @@ jump {
   border-bottom: 1px solid white;
 }
 
-jump icons {
-  display: flex;
+.jump .icons {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   flex-direction: column;
+  -webkit-flex-direction: column;
   height: 16vw;
   width: 5vw;
   align-self: flex-end;
+  -webkit-align-self: flex-end;
   margin-right: 8vw;
   font-size: 2.5vw;
   justify-content: space-around;
+  -webkit-justify-content: space-around;
 }
 
-jump icons a div {
-  display: flex;
+.jump .icons a div {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   align-self: center;
+  -webkit-align-self: center;
 }
 
-jump icons a div.fa-soundcloud span {
+.jump .icons a div.fa-soundcloud span {
   font-size: 1vw;
   align-self: center;
+  -webkit-align-self: center;
 }
 
 p {
   align-self: center;
+  -webkit-align-self: center;
   font-family: 'Roboto', sans-serif;
   font-size: 1.5vw;
 }
 
 
-projects {
-  display: flex;
+.projects {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: space-around;
+  -webkit-justify-content: space-around;
   align-self: center;
+  -webkit-align-self: center;
   width: 80vw;
   height: 20vw;
   margin-bottom: 10vw;
 }
 
-projects a p {
+.projects a p {
   border: none;
   font-size: 1vw;
   margin-left: 4.5vw;
 }
 
-dela {
-  display: flex;
+.dela {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   width: 15vw;
   height: 15vw;
   background: white url('../img/dela.jpg') right no-repeat;
@@ -261,8 +338,11 @@ dela {
   overflow: hidden;
 }
 
-guessthatsong {
-  display: flex;
+.guessthatsong {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   width: 15vw;
   height: 15vw;
   background: url('../img/guessthatsong.png') center no-repeat;
@@ -272,8 +352,11 @@ guessthatsong {
   overflow: hidden;
 }
 
-memorygame {
-  display: flex;
+.memorygame {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   width: 15vw;
   height: 15vw;
   background: url('../img/memorygame.png') center no-repeat;
@@ -284,10 +367,16 @@ memorygame {
 }
 
 footer {
-  display: flex;
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: space-around;
+  -webkit-justify-content: space-around;
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
   align-items: center;
+  -webkit-align-items: center;
   background: #64aaa3;
   border-top: 1px solid white;
   width: 100vw;
@@ -296,7 +385,11 @@ footer {
 }
 
 footer div {
-  display: flex;
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: center;
+  -webkit-justify-content: center;
   min-width: 20vw;
 }
