--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,14 @@ a {
   display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
 
   justify-content: center;
+  align-items: center;
   -webkit-justify-content: center;
   background-color: black;
   height: auto;
   width: 100vw;
+  height: 100vh;
   overflow: hidden;
+  transition: all .2s ease;
 }
 
 .first-section .first-pic {
@@ -38,7 +41,7 @@ a {
 }
 
 .first-section .content {
-  width: 200px;
+  width: 230px;
   list-style-type: none;
   display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
   display: -ms-flexbox;  /* TWEENER - IE 10 */
@@ -58,43 +61,41 @@ a {
   width: 100%;
 }
 
-#first {
-  font-size: 24.1px;
-}
+#first { font-size: 27.4px }
 
 #second {
   color: #FF2D88;
   font-weight: bold;
-  font-size: 22.4px;
+  font-size: 25.7px;
   font-family: 'Roboto', sans-serif;
   margin-top: -.5vw;
 }
 
 #third-a {
-  font-size: 29px;
+  font-size: 33.2px;
   margin-top: -.5vw;
 }
 
 #third-b {
   letter-spacing: 15px;
   margin: -11px 0 -4px 0;
-  font-size: 23px;
+  font-size: 29.5px;
 }
 
 #fourth {
-  font-size: 15px;
+  font-size: 18px;
   text-align: justify;
   text-justify: inter-word;
 }
 
 #fifth {
-  font-size: 15px;
+  font-size: 17px;
   text-align: justify;
   text-justify: inter-word;
 }
 
 #fifth span {
-  font-size: 18.9px;
+  font-size: 21.8px;
   letter-spacing: 0.5px;
 }
 
@@ -396,4 +397,29 @@ footer div {
   justify-content: center;
   -webkit-justify-content: center;
   min-width: 20vw;
+}
+
+@media only screen and (max-width: 490px) {
+  .first-section .first-pic {
+    background: url(../img/pic-first-section.jpg) right no-repeat;
+    background-size: contain;
+    height: 70vh;
+    margin: 20px 0 0 -40px;
+  }
+
+  .first-section .content {
+    padding: 0;
+  }
+
+  .first-section .content li {
+    width: 93%;
+  }
+
+  #first { font-size: 25.4px }
+  #second { font-size: 23.8px }
+  #third-a { font-size: 30.2px }
+  #third-b { font-size: 24.4px }
+  #fourth { font-size: 16px }
+  #fifth { font-size: 15px }
+  #fifth span { font-size: 20px }
 }
