--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Roboto:400,100,500|Quicksand:400,300,700|Varela);
-/* add prefixes */
 
 body {
   margin: 0;
@@ -15,38 +14,37 @@ a {
 }
 
 .first-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  height: auto;
+  background: black;
+  height: 100vh;
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  transition: all .2s ease;
-}
-
-.first-section .first-pic {
-  background: url('../img/pic-first-section.jpg') right no-repeat;
-  background-size: contain;
-  width: 190px;
-  height: 100vh;
-}
-
-.first-section .content {
-  width: 230px;
-  list-style-type: none;
   display: flex;
-  flex-direction: column;
-  color: white;
-  margin: 0 10px;
-  height: 100%;
-  justify-content: center;
-  padding-left: 0;
 }
 
-.first-section .content li {
-  width: 100%;
+.first-section-content {
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+  align-self: center;
+}
+
+.first-section-content .first-pic {
+  background: url(../img/pic-first-section.jpg) no-repeat;
+  background-size: contain;
+  width: 50%;
+  height: 550px;
+  background: yellow;
+}
+
+.first-section-content .content {
+  list-style-type: none;
+  width: 50%;
+  background: orange;
+  margin: 0;
+  padding: 0;
+}
+
+.first-section-content .content li {
+
 }
 
 #first { font-size: 6.2vw }
@@ -83,44 +81,9 @@ a {
   letter-spacing: 0.5px;
 }
 
-.content .socials{
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
-  justify-content: space-around;
-  -webkit-justify-content: space-around;
-  font-size: 25px;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
-  padding: 5px 0;
-  margin: 10px 0;
-}
-
-footer {
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
-  justify-content: space-around;
-  -webkit-justify-content: space-around;
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  align-items: center;
-  -webkit-align-items: center;
-  background: #64aaa3;
-  border-top: 1px solid white;
-  width: 100vw;
-  height: 5vw;
-  overflow: hidden;
-}
-
-footer div {
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
-  justify-content: center;
-  -webkit-justify-content: center;
-  min-width: 20vw;
+@media only screen and (min-width: 550px) {
+  .first-section-content {
+    width: 70%;
+    max-width:
+  }
 }
