--- a/css/main.css
+++ b/css/main.css
@@ -17,17 +17,27 @@ a {
   background: black;
   height: 100vh;
   width: 100vw;
-  display: flex;
   min-height: 610px;
   transition: all 100ms ease;
+
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .first-section-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+
   width: 90%;
   margin: 0 auto;
-  align-self: center;
-  justify-content: center;
 }
 
 .first-section-content .first-pic {
@@ -80,12 +90,12 @@ a {
 }
 
 .content .socials{
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
-  -webkit-justify-content: space-around;
+
   font-size: 25px;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
@@ -93,7 +103,36 @@ a {
   margin: 10px 0;
 }
 
-@media only screen and (max-width: 450px) {
+.second-section {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  background: #404040;
+  overflow: hidden;
+}
+
+.me-second {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  background: url('../img/pic-second-section.jpg') right no-repeat;
+  justify-content: center;
+  -webkit-justify-content: center;
+  background-size: contain;
+  width: 40vw;
+  height: 50vw;
+  position: absolute;
+  bottom: -20px;
+}
+
+@media only screen and (max-width: 740px) {
   .first-section-content .content {
     width: 90%;
     margin: 0 auto;
@@ -101,11 +140,7 @@ a {
   }
 
   .first-section-content .first-pic {
-    height: 370px;
-    position: absolute;
-    top: 620px;
-    right: 0;
-    opacity: .6;
+    display: none;
   }
 
   .first-section-content .content li {
@@ -123,10 +158,4 @@ a {
   #fourth  { font-size: 17px }
   #fifth   { font-size: 17px }
   #fifth span { font-size: 24.5px }
-}
-
-@media all and (orientation:landscape) {
-  .first-section {
-
-  }
 }
